fix: fixed touch issue on mobile deviced
Fixed: Drag down reload on mobile phones causing touch gestures to not work
Fixed: Wrong error messages on dialog boxes

--- a/client/res/css/desktop.css
+++ b/client/res/css/desktop.css
@@ -14,6 +14,7 @@ body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	touch-action: none;
 }
 
 #body {
